--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: Install flake8
+      - name: Install Requirements
         run: |
           python -m pip install --upgrade pip
-          pip3 install cookiecutter==1.7.2
+          pip3 install -r requirements.txt
 
       - name: Run flake8
         run: |
